# LiTr

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  build.gradle  constants.gradle  gradle.properties  gradlew  publish.gradle  settings.gradle
.github/workflows/: commit.yml  deploy-snapshot.yml  merge-check.yml  publish-maven-central.yml  publish_bintray  publish_bintray.yml  pull_request.yml
gradle/: publishing.gradle
gradle/wrapper/: gradle-wrapper.properties
litr/: build.gradle
litr-demo/: build.gradle
litr-demo/src/main/: AndroidManifest.xml
litr-demo/src/main/java/com/linkedin/android/litr/demo/: BaseDemoFragment.java  BaseTransformationFragment.java  CameraSizes.kt  DemoCase.java  DemoCasesAdapter.java  DemoFilter.java  EmptyVideoFragment.kt  ExtractAudioTrackFragment.java  ExtractFramesFragment.java  ExtractFramesFragment.kt  ExtractTrackFragment.java  ExtractVideoTrackFragment.java  ExtractedFramesAdapter.kt  FreeTransformVideoGlFragment.java  InfoActivity.java  MainActivity.java  MainFragment.java  MediaPickerFragment.java  MediaPickerListener.java  MediaPickerTarget.java  MediaTrackAdapter.java  MockTranscodeFragment.java  MuxVideoAndAudioFragment.kt  RecordAudioFragment.kt  RecordCamera2Fragment.kt  RecordCameraFragment.kt  RecordSurfaceFragment.kt  SquareCenterCropFragment.java  TranscodeAudioFragment.kt  TranscodeToVp9Fragment.kt  TranscodeVideoGlFragment.java  VideoFilmStripView.kt  VideoFilterPreviewFragment.java  VideoFiltersFragment.java  VideoWatermarkFragment.java
litr-demo/src/main/java/com/linkedin/android/litr/utils/: CameraSizeUtil.kt  DeviceUtil.java  TrackMetadataUtil.java  TransformationUtil.java
litr-demo/src/main/res/layout/: activity_info.xml  fragment_audio_record.xml  fragment_camera2_record.xml  fragment_camera_record.xml  fragment_empty_video.xml  fragment_extract_frames.xml  fragment_extract_track.xml  fragment_main.xml  fragment_mock_transcode.xml  fragment_mux_video_audio.xml  fragment_record_camera.xml  fragment_record_surface.xml  fragment_square_center_crop.xml  fragment_transcode_audio.xml  fragment_transcode_video_gl.xml  fragment_transcoding.xml  fragment_video_filter_preview.xml  fragment_video_filters.xml  fragment_video_overlay_gl.xml  fragment_video_vp9.xml  fragment_video_watermark.xml  item_audio_track.xml  item_frame.xml  item_generic_track.xml  item_video_track.xml  section_audio_volume.xml  section_pick_audio.xml  section_pick_overlay.xml  section_pick_video.xml  section_select_track.xml  section_target_video_configuration.xml  section_transcode_audio.xml  section_transcode_video.xml  section_transformation_progress.xml  section_trim.xml
litr-demo/src/main/res/menu/: main.xml
litr-demo/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
litr-demo/src/main/res/xml/: file_provider_paths.xml
litr-ffmpeg/: .gitignore  README.md  build.gradle
litr-ffmpeg/src/main/cpp/: CMakeLists.txt  NativeLogger.cpp
litr-ffmpeg/src/main/cpp/ffmpeg_bundled/: README.md
litr-ffmpeg/src/main/java/com/linkedin/android/litr/muxers/: MediaFormatEx.kt  NativeLogger.kt  NativeMediaMuxer.kt
litr-filters/: build.gradle
litr-filters/src/main/: AndroidManifest.xml
litr-muxers/: .gitignore  README.md  build.gradle
litr-muxers/src/main/cpp/: CMakeLists.txt  FFmpeg.h  Logging.h  MediaMuxer.cpp  MediaMuxer.h  NativeMediaMuxer.cpp  build_ffmpeg.sh
litr-muxers/src/main/cpp/ffmpeg_bundled/libavutil/: ffversion.h
litr-muxers/src/main/java/com/linkedin/android/litr/muxers/: MediaFormatEx.kt  NativeMediaMuxer.kt  NativeMediaMuxerMediaTarget.kt  NativeMuxersLib.kt  NativeOutputFormats.kt
litr/src/main/: AndroidManifest.xml
litr/src/main/cpp/: CMakeLists.txt  audio-processor.cpp  audio-resampler.cpp
litr/src/main/cpp/oboe_resampler/: CMakeLists.txt
litr/src/main/java/com/linkedin/android/litr/: Annotations.kt  MarshallingTransformationListener.java  MediaTransformer.java  MimeType.java  MockMediaTransformer.java  TrackTransform.java  TransformationJob.java  TransformationListener.java  TransformationOptions.java
litr/src/main/java/com/linkedin/android/litr/analytics/: TrackTransformationInfo.java  TransformationStatsCollector.java
litr/src/main/java/com/linkedin/android/litr/codec/: Decoder.java  Encoder.java  Frame.java  MediaCodecDecoder.java  MediaCodecEncoder.java  PassthroughBufferEncoder.kt  PassthroughDecoder.kt  PassthroughEncoder.kt
litr/src/main/java/com/linkedin/android/litr/exception/: InsufficientDiskSpaceException.java  MediaSourceException.java  MediaTargetException.java  MediaTransformationException.java  TrackTranscoderException.java
litr/src/main/java/com/linkedin/android/litr/filter/: BitmapOverlayFilter.java  BufferFilter.kt  GlFilter.java  GlFrameRenderFilter.java  Transform.java
litr/src/main/java/com/linkedin/android/litr/frameextract/: FrameExtractJob.kt  FrameExtractListener.kt  FrameExtractMode.kt  FrameExtractParameters.kt  VideoFrameExtractor.kt
litr/src/main/java/com/linkedin/android/litr/io/: AudioRecordMediaSource.kt  Camera2MediaSource.kt  CaptureMediaSource.kt  ContinuousMediaSource.kt  ExternalMediaSource.kt  MediaExtractorMediaSource.java  MediaMuxerMediaTarget.java  MediaRange.java  MediaSource.java  MediaSourceFactory.kt  MediaTarget.java  MediaTargetSample.kt  MockVideoMediaSource.kt  WavMediaTarget.kt
litr/src/main/java/com/linkedin/android/litr/preview/: PreviewEglConfigChooser.java  PreviewEglContextFactory.java  VideoFilterPreviewView.java  VideoPreviewRenderer.java
litr/src/main/java/com/linkedin/android/litr/recorder/: MediaRecordJob.kt  MediaRecordListener.kt  MediaRecordParameters.kt  MediaRecordRequestManager.kt  MediaRecorder.kt  MediaRecorderFactory.kt  SurfaceMediaRecorder.kt
litr/src/main/java/com/linkedin/android/litr/render/: AudioProcessor.kt  AudioProcessorFactory.kt  AudioRenderer.kt  AudioResampler.kt  AudioResamplerFactory.kt  FrameDropper.kt  GlFramebuffer.kt  GlRenderUtils.java  GlSingleFrameRenderer.kt  GlTexture.kt  (+14 more)
litr/src/test/java/com/linkedin/android/litr/: TransformationJobShould.java
(+196 files in other folders)
